--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,14 +19,20 @@ a {
 // Header 영역
 #header {
 	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translateY(-50%);
 	width: 100%;
+	height: 100px;
 	&::after {
 		content: "";
 		display: block;
-		height: 1px;
-		border-bottom: 1px solid pink;
+		width: 100%;
+		background-color: pink;
+		position: absolute;
+		top: 50%;
+		left: 50%;
 	}
-	// margin: 0 auto;
 	.inner {
 		width: 1180px;
 		height: 100px;
@@ -49,6 +55,7 @@ a {
 						&:hover {
 							background-color: #555;
 							color: #fff;
+							transition: 3s ease;
 						}
 					}
 				}
@@ -69,111 +76,6 @@ a {
 				}
 			}
 		}
-
-		// // btnCall and menuMo
-		// .btnCall {
-		// 	position: absolute;
-		// 	top: 50%;
-		// 	right: 30px;
-		// 	transform: translateY(-50%);
-		// 	width: 20px;
-		// 	// btnCall이 인라인 요소 a태그니깐 위드,하이트값 안되는데도 되는이유가 포지션 앱솔줘서..
-		// 	height: 20px;
-		// 	display: none;
-
-		// 	&::before {
-		// 		content: "";
-		// 		display: block;
-		// 		width: 100%;
-		// 		height: 2px;
-		// 		background-color: #000;
-		// 		position: absolute;
-		// 		top: 0;
-		// 		left: 0;
-		// 		transition: top 0.5s 0s, transform 0.5s 0.5s;
-		// 	}
-		// 	&::after {
-		// 		content: "";
-		// 		display: block;
-		// 		width: 100%;
-		// 		height: 2px;
-		// 		background-color: #000;
-		// 		position: absolute;
-		// 		bottom: 0;
-		// 		left: 0;
-		// 		transition: bottom 0.5s 0s, transform 0.5s 0.5s;
-		// 	}
-		// 	span {
-		// 		display: block;
-		// 		width: 100%;
-		// 		height: 2px;
-		// 		background-color: #000;
-		// 		position: absolute;
-		// 		top: 50%;
-		// 		left: 0;
-		// 		margin-top: -1px;
-		// 		text-indent: -99999px;
-		// 		transition: all 1s;
-		// 	}
-		// 	&.on {
-		// 		&::before {
-		// 			top: 50%;
-		// 			margin-top: -1px;
-		// 			transform: rotate(45deg);
-		// 		}
-		// 		&::after {
-		// 			bottom: 50%;
-		// 			margin-bottom: -1px;
-		// 			transform: rotate(-45deg);
-		// 		}
-		// 		span {
-		// 			transform: translateX(100%);
-		// 			opacity: 0;
-		// 		}
-		// 	}
-		// }
-		// .menuMo {
-		// 	width: 270px;
-		// 	height: 100vh;
-		// 	background-color: #333;
-		// 	position: fixed;
-		// 	top: 0;
-		// 	left: -270px;
-		// 	padding: 35px 30px;
-		// 	z-index: 10;
-		// 	transition: 0.5s;
-		// 	text-align: center;
-		// 	&.on {
-		// 		left: 0;
-		// 	}
-		// 	h1 {
-		// 		padding-bottom: 30px;
-		// 		border-bottom: 1px solid #666;
-		// 		a {
-		// 			display: block;
-		// 			font: bold 24px/1 "arial";
-		// 			color: #fff;
-		// 			text-align: center;
-		// 		}
-		// 		span {
-		// 			font-size: 12px;
-		// 			color: #aaa;
-		// 		}
-		// 	}
-		// 	#gnbMo {
-		// 		li {
-		// 			a {
-		// 				display: block;
-		// 				width: 100%;
-		// 				padding: 20px 0;
-		// 				border-bottom: 1px solid #444;
-		// 				font: bold 14px/1 "arial";
-		// 				color: #888;
-		// 				text-align: center;
-		// 			}
-		// 		}
-		// 	}
-		// }
 	}
 }
 
@@ -183,13 +85,16 @@ a {
 	width: 100%;
 	height: calc(100vh - 400px);
 	//비쥬얼과 헤더와 섹션을 합하면 100%를 차지해야한다.
+	margin-top: -100px;
 	overflow: hidden;
 	background-color: #000;
-	video {
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		opacity: 0.4;
+	.pic {
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			opacity: 0.4;
+		}
 	}
 	.inner {
 		width: 1180px;
@@ -207,40 +112,6 @@ a {
 			font: 16px/1.4 "arial";
 			color: #888;
 			margin-bottom: 80px;
-		}
-	}
-}
-
-//Section영역
-
-#section {
-	width: 100%;
-	padding: 100px 0;
-	.inner {
-		width: 580px;
-		left: 25%;
-		position: relative;
-		h1 {
-			font: bold 50px/1 "arial";
-			color: black;
-			text-align: LEFT;
-			margin-bottom: 50px;
-		}
-		p {
-			margin-bottom: 50px;
-		}
-		a {
-			display: block;
-			width: 400px;
-			height: 30px;
-			border: 1px solid #bbb;
-			font: bold 11px/30px "arial";
-			color: balck;
-			text-align: center;
-			&:hover {
-				background: #fff;
-				color: #555;
-			}
 		}
 	}
 }
