--- a/scss/style.scss
+++ b/scss/style.scss
@@ -247,7 +247,7 @@ a {
 		}
 		.tab {
 			width: 100%;
-			padding-top: 40px;
+			padding-top: 100px;
 			// border: 1px solid blue;
 			margin: 100px auto;
 			position: relative;
@@ -290,11 +290,16 @@ a {
 			dd {
 				width: 100%;
 				height: 200px;
+				position: relative;
 				// display: none; // 자바스크립트하고 풀어주기
-
 				article {
 					width: 100%;
 					height: 100%;
+					position: absolute;
+					overflow: hidden;
+					top: 0;
+					left: 0;
+
 					&::after {
 						content: "";
 						display: block;
@@ -303,18 +308,19 @@ a {
 					.pic {
 						//사진있는곳
 						float: left;
+						width: 50%;
 						overflow: hidden;
-						width: 580px;
+						height: 400px;
 						img {
 							width: 100%;
-							height: 500px;
+							height: 200px;
 							object-fit: cover;
 						}
 					}
-					.inner {
+					.wrap {
 						//문구있는곳
 						float: left;
-						width: 580px;
+						width: 50%;
 						height: 400px;
 						background-color: #ada934c1;
 						position: relative;
@@ -329,7 +335,6 @@ a {
 							text-align: left;
 						}
 						a {
-							position: absolute;
 							bottom: 50px;
 							left: 10px;
 							border: 1px solid black;
