--- a/scss/style.scss
+++ b/scss/style.scss
@@ -321,11 +321,11 @@ a {
 						//문구있는곳
 						float: left;
 						width: 50%;
-						height: 400px;
+						height: 100%;
 						background-color: #ada934c1;
 						position: relative;
 						h2 {
-							padding: 80px 10px 40px;
+							padding: 30px 10px 10px;
 							font: bold 40px/1.3 "arial";
 						}
 						p {
@@ -338,7 +338,7 @@ a {
 							bottom: 50px;
 							left: 10px;
 							border: 1px solid black;
-							padding: 8px 20px;
+							padding: 10px 20px;
 							color: black;
 							font: 13px/1.3 "arial";
 						}
