--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ a {
   border-left: none;
   border-right: none;
   border-bottom: 1px solid #bbb;
-  background: white;
+  background: none;
   text-align: center;
   font: bold 14px/1 "";
 }
@@ -209,6 +209,9 @@ a {
 
 #services {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #services .inner {
   width: 1180px;
@@ -266,8 +269,9 @@ a {
 }
 #services .inner .tab dd {
   width: 100%;
-  height: 200px;
-  position: relative;
+  height: 350px;
+  position: absolute;
+  top: 100px;
 }
 #services .inner .tab dd article {
   width: 100%;
@@ -290,32 +294,36 @@ a {
 }
 #services .inner .tab dd article .pic img {
   width: 100%;
-  height: 200px;
+  min-height: 350px;
   object-fit: cover;
 }
 #services .inner .tab dd article .wrap {
   float: left;
   width: 50%;
-  height: 100%;
+  min-height: 350px;
   background-color: rgba(173, 169, 52, 0.7568627451);
   position: relative;
 }
 #services .inner .tab dd article .wrap h2 {
-  padding: 30px 10px 10px;
+  padding: 30px 10px 0px;
   font: bold 40px/1.3 "arial";
 }
 #services .inner .tab dd article .wrap p {
-  padding-left: 10px;
+  padding-left: 30px;
   font: 18px/1.3 "arial";
   width: 100%;
   text-align: left;
+  margin-bottom: 50px;
 }
 #services .inner .tab dd article .wrap a {
-  bottom: 50px;
-  left: 10px;
+  display: block;
+  width: 100px;
+  height: 100%;
+  margin: 80px 10px 10px;
   border: 1px solid black;
-  padding: 10px 20px;
+  padding: 10px 30px;
   color: black;
+  letter-spacing: 1px;
   font: 13px/1.3 "arial";
 }
 #services .inner .tab dd.on .pic {
