--- a/scss/style.scss
+++ b/scss/style.scss
@@ -218,10 +218,10 @@ a {
 							font: bold 14px/1 "";
 						}
 					}
-					.agreement {
-						label[for="agree"] {
-							font-size: 20px;
-						}
+				}
+				.agreement {
+					label[for="agree"] {
+						font-size: 20px;
 					}
 				}
 			}
@@ -240,7 +240,6 @@ a {
 		width: 1180px;
 		position: relative;
 		margin: 0 auto;
-
 		h1 {
 			font-weight: bold;
 			font-size: 30px;
@@ -255,9 +254,12 @@ a {
 			// border: 1px solid blue;
 			margin: 100px auto;
 			position: relative;
+			height: 400px;
 			dt {
+				text-align: center;
 				width: calc(100% / 6);
 				height: 40px;
+				text-align: center;
 				position: absolute;
 				top: 0;
 				opacity: 1; // 자바스크립타하고 나중에 0으로 바꿔보기
@@ -358,6 +360,102 @@ a {
 					display: flex;
 				}
 			}
+		}
+	}
+}
+
+#LatestProjects {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	.inner {
+		width: 1180px;
+		position: relative;
+		margin: 50px auto;
+		h1 {
+			font-weight: bold;
+			font-size: 30px;
+			color: #555;
+			text-align: center;
+			margin-top: 100px;
+			letter-spacing: 1px;
+		}
+		ul {
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+			padding-top: 60px;
+			li {
+				display: block;
+				padding: 1px 40px;
+				font: bold 20px/1 "arial";
+				color: black;
+				text-align: center;
+			}
+			a {
+				width: 100%;
+				display: block;
+				padding: 14px 40px;
+				font: 15px/1 "arial";
+				color: black;
+				text-align: center;
+				&:hover {
+					width: 100%;
+					color: #aaa;
+					transition: 0.5s;
+					transform: scale(1.2);
+				}
+			}
+		}
+		.slider {
+			width: 500px;
+			height: 400px;
+			position: relative;
+			margin: 0px auto;
+			overflow: hidden;
+			ul {
+				width: calc(100% * 3);
+				height: 100%;
+				position: absolute;
+				top: 0;
+				left: 0;
+				li {
+					width: calc(100% / 3);
+					height: 100%;
+					font-size: 40px;
+					color: #000;
+					float: left;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					&[data-index="1"] {
+						background: url(../img/figure.jpg) no-repeat
+							center/cover;
+					}
+					&[data-index="2"] {
+						background: url(../img/figure.jpg) no-repeat
+							center/cover;
+					}
+					&[data-index="3"] {
+						background: url(../img/figure.jpg) no-repeat
+							center/cover;
+					}
+				}
+			}
+		}
+
+		.prev {
+			position: absolute;
+			top: 50%;
+			left: 50px;
+			margin-top: -50px;
+		}
+		.next {
+			position: absolute;
+			top: 50%;
+			right: 50px;
+			margin-top: -50px;
 		}
 	}
 }
