--- a/css/style.css
+++ b/css/style.css
@@ -413,16 +413,170 @@ a {
   background: url(../img/figure.jpg) no-repeat center/cover;
 }
 #LatestProjects .inner .prev {
+  display: block;
+  width: 50px;
+  height: 50px;
+  top: 50%;
+  float: left;
+  margin: 100px;
+  position: absolute;
+}
+#LatestProjects .inner .prev strong {
   position: absolute;
   top: 50%;
-  left: 50px;
-  margin-top: -50px;
+  left: 50%;
+  transition: all 0.5s;
+  opacity: 0;
+  transform: translate(100%, -50%);
+  font: bold 12px/1 "arial";
+  color: #111;
+}
+#LatestProjects .inner .prev::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: rotate(-30deg);
+  transform-origin: left center;
+  transition: all 0.5s;
+}
+#LatestProjects .inner .prev::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: rotate(30deg);
+  transform-origin: left center;
+  transition: all 0.5s;
+}
+#LatestProjects .inner .prev:hover::before {
+  top: 0%;
+  transform: rotate(-180deg);
+  transform-origin: center center;
+}
+#LatestProjects .inner .prev:hover::after {
+  top: 100%;
+  transform: rotate(180deg);
+  transform-origin: center center;
+}
+#LatestProjects .inner .prev:hover strong {
+  transform: translate(-50%, -50%);
+  opacity: 1;
 }
 #LatestProjects .inner .next {
+  display: block;
+  width: 50px;
+  height: 50px;
+  float: left;
+  margin: 100px;
+  top: 50%;
+  right: 0%;
+  position: absolute;
+}
+#LatestProjects .inner .next strong {
   position: absolute;
   top: 50%;
-  right: 50px;
-  margin-top: -50px;
+  left: 50%;
+  transform: translate(-150%, -50%);
+  opacity: 0;
+  transition: all 0.5s;
+  font: bold 12px/1 "arial";
+  color: #111;
+}
+#LatestProjects .inner .next::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: rotate(30deg);
+  transform-origin: right center;
+  transition: all 0.5s;
+}
+#LatestProjects .inner .next::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: rotate(-30deg);
+  transform-origin: right center;
+  transition: all 0.5s;
+}
+#LatestProjects .inner .next:hover::before {
+  top: 0%;
+  transform-origin: center center;
+  transform: rotate(180deg);
+}
+#LatestProjects .inner .next:hover::after {
+  top: 100%;
+  transform: rotate(-180deg);
+  transform-origin: center center;
+}
+#LatestProjects .inner .next:hover strong {
+  transform: translate(-50%, -50%);
+  opacity: 1;
+}
+
+#footer {
+  width: 100%;
+  padding: 80px 0;
+  background: #444;
+}
+#footer .inner {
+  width: 1180px;
+  margin: 0 auto;
+}
+#footer .inner::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+#footer .inner h1 {
+  font: bold 30px/1 "arial";
+  color: #666;
+  float: left;
+}
+#footer .inner ul {
+  float: right;
+}
+#footer .inner ul li {
+  float: left;
+  margin-left: 20px;
+}
+#footer .inner ul li a {
+  font: bold 14px/1 "arial";
+  color: #666;
+}
+#footer .inner address {
+  float: left;
+  width: 100%;
+  font: 14px/1.3 "arial";
+  color: #777;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: 1px solid #888;
+}
+#footer .inner p {
+  float: left;
+  width: 100%;
+  font: 12px/1 "arial";
+  color: #777;
 }
 
 /*# sourceMappingURL=style.css.map */
